--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
         document.getElementById('contactEmail').setAttribute("disabled", "true")
         document.getElementById('contactFormSubmit').setAttribute("disabled", "true");
     })
-  </script>  
+  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0360WLRVMD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0360WLRVMD');
+</script>
   </body>
 </html>
